WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
28215
[v8] Fix atomic string externalization crash
https://bugs.webkit.org/show_bug.cgi?id=28215
Summary
[v8] Fix atomic string externalization crash
Christian Plesner Hansen
Reported
2009-08-12 02:38:10 PDT
Atomic string externalization assumes that all non-empty strings can be externalized which is untrue on 64-bit. This change fixed that.
Attachments
"Initial"
(1.93 KB, patch)
2009-08-12 02:39 PDT
,
Christian Plesner Hansen
no flags
Details
Formatted Diff
Diff
Tabs-fix
(1.95 KB, patch)
2009-08-12 04:15 PDT
,
Christian Plesner Hansen
dglazkov
: review+
eric
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Christian Plesner Hansen
Comment 1
2009-08-12 02:39:55 PDT
Created
attachment 34649
[details]
"Initial"
Christian Plesner Hansen
Comment 2
2009-08-12 04:15:00 PDT
Created
attachment 34652
[details]
Tabs-fix
Dimitri Glazkov (Google)
Comment 3
2009-08-12 08:48:13 PDT
Comment on
attachment 34652
[details]
Tabs-fix r=me
Dimitri Glazkov (Google)
Comment 4
2009-08-12 08:54:08 PDT
Landed as
http://trac.webkit.org/changeset/47106
.
David Levin
Comment 5
2009-08-12 15:11:42 PDT
Had to roll this out
http://trac.webkit.org/changeset/47153
due to v8 being rolled back upstream.
David Levin
Comment 6
2009-08-12 15:12:47 PDT
Comment on
attachment 34652
[details]
Tabs-fix This commit needs to wait for an appropriate version of v8 to be available downstream.
David Levin
Comment 7
2009-08-13 11:26:56 PDT
Comment on
attachment 34652
[details]
Tabs-fix The v8 build with the api has landed upstream so this can be committed now.
Eric Seidel (no email)
Comment 8
2009-08-13 11:52:19 PDT
Comment on
attachment 34652
[details]
Tabs-fix Rejecting patch 34652 from commit-queue. This patch will require manual commit. Failed to run "['git', 'svn', 'dcommit']" exit_code: 1 cwd: None
Eric Seidel (no email)
Comment 9
2009-08-13 11:55:04 PDT
The following files contain tab characters: trunk/WebCore/ChangeLog Please use spaces instead to indent. If you must commit a file with tabs, use svn propset to set the "allow-tabs" property. Will need to be fixed manually. We need to make svn-create-patch warn about this type of error to catch these things earlier.
Christian Plesner Hansen
Comment 10
2009-08-13 12:18:50 PDT
> The following files contain tab characters: > > trunk/WebCore/ChangeLog
I don't see any tabs in the updated patch.
Eric Seidel (no email)
Comment 11
2009-08-13 13:15:35 PDT
vim shows a ^I char here: + [v8] Fix atomic string externalization crash.^I$
Eric Seidel (no email)
Comment 12
2009-08-13 13:16:25 PDT
I'll land this manually.
Eric Seidel (no email)
Comment 13
2009-08-13 13:17:10 PDT
Comment on
attachment 34652
[details]
Tabs-fix Rejecting patch 34652 from commit-queue. This patch will require manual commit. Failed to run "['git', 'svn', 'dcommit']" exit_code: 1 cwd: None
Eric Seidel (no email)
Comment 14
2009-08-13 13:18:10 PDT
Committing to
http://svn.webkit.org/repository/webkit/trunk
... M WebCore/ChangeLog M WebCore/bindings/v8/V8Binding.cpp Committed
r47227
M WebCore/ChangeLog M WebCore/bindings/v8/V8Binding.cpp
r47227
= a210e42b217c8c1eff26cbd44431379c0e2fde0b (trunk) No changes between current HEAD and refs/remotes/trunk Resetting to the latest refs/remotes/trunk
http://trac.webkit.org/changeset/47227
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug