2009-08-12  David Levin  <levin@chromium.org>

No review, rolling out r47106.
        https://bugs.webkit.org/show_bug.cgi?id=28215

        This patch relied on a new version of v8 which is not available
        in chromium yet.

        * bindings/v8/V8Binding.cpp:
        (WebCore::v8StringToAtomicWebCoreString):

Canonical link: https://commits.webkit.org/38754@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47153 268f45cc-cd09-0410-ab3c-d52691b4dbfc